# nfd2

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  deny.toml  release.toml
.github/workflows/: rust-ci.yml
examples/: builder_open_jpg.rs  example.rs  open_multiple.rs  pick_folder.rs
src/: common.rs  error.rs  ffi.rs  gtk.rs  lib.rs  zenity.rs
