[package]
name = "nfd2"
version = "0.1.1"
edition = "2018"
authors = [
    "Saurav Sachidanand <sauravsachidanand@gmail.com>",
    "Daniel Collin <daniel@collin.com>",
    "Denis Kolodin <deniskolodin@gmail.com>",
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>"
]
documentation = "https://docs.rs/nfd2"
repository = "https://www.github.com/EmbarkStudios/nfd2"
homepage = "https://github.com/EmbarkStudios/nfd2"
description = "Rust bindings to nativefiledialog"
keywords = ["file", "dialog", "ui"]
readme = "README.md"
license = "MIT AND Zlib"

include = [
    "/*.toml",
    "/*.md",
    "build.rs",
    "LICENSE-MIT",
    "!Cargo.lock",
    "examples/*.rs",
    "src/*.rs",
    "nativefiledialog/LICENSE",
    "nativefiledialog/src/**",
    "!nativefiledialog/src/test/*",
]

build = "build.rs"

[build-dependencies]
cc = "1.0"
